[gd_scene load_steps=4 format=3 uid="uid://dpj3jla3ypo36"]

[ext_resource type="Script" path="res://Art/SlugGuy/slime_trail.gd" id="1_t7rds"]
[ext_resource type="Texture2D" uid="uid://b870f81wosc7b" path="res://Art/SlugGuy/slug_trail.png" id="1_x1nfp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8fli7"]
radius = 12.371

[node name="Node2D" type="Area2D"]
z_index = -1
scale = Vector2(2.82921, 2.82921)
script = ExtResource("1_t7rds")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.12, 1.12)
texture = ExtResource("1_x1nfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8fli7")

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
